# Quill

./: .gitignore  CMakeLists.txt  LICENSE  README.md  parse.py  run.sh  run_slurm_example.py
doc/: quill.tex
docs/: 404.md  Gemfile  _config.yml  analyze.md  build.md  index.md  run.md
include/: balancing.h  containers.h  main.h  maxwell.h  parameters.h  physical_constants.h  pusher.h
python/: energy_test.py  qplot.py  resread.py  tcmap.py
quill3d/: .gitignore  CMakeLists.txt  advance.cpp  balancing.cpp  balancing.h  compilation_defines.h  containers.cpp  containers.h  deposition.cpp  edit_sed_cout.py  fout.cpp  functional_init_interface.hpp  generate_brush.py  hfile  init.cpp  job.sh  listener.cpp  low-level.cpp  main.cpp  main.h  makefile  maxwell.cpp  maxwell.h  mc.cpp  myhostfile  openpmd_output.cpp  openpmd_output.h  parallel.cpp  parallel.ini  parse.py  parse.sh  plist.cpp  pusher.cpp  pusher.h  run.sh  run_config.cpp  run_qsub.py  run_qsub.sh  run_slurm_example.sh  test_parse.py  (+1 more)
quill3d-conf/: quill.conf  quill.conf.2pulses-cos  quill.conf.4pulses  quill.conf.Anguelov-Vankov-99  quill.conf.Esirkepov04  quill.conf.Ridgers12  quill.conf.beam-lp-colliding  quill.conf.bubble  quill.conf.bubble-pearl4  quill.conf.bubble2  quill.conf.bubble_intr  quill.conf.catching-test  quill.conf.catching-test2  quill.conf.catching-test3  quill.conf.electron-trapping  quill.conf.example  quill.conf.film-and-focused-lp  quill.conf.film-and-lp-model  quill.conf.film-horizontal1  quill.conf.film-horizontal2  quill.conf.frozen-in--field  quill.conf.gff-theory-oblique  quill.conf.hb-etrapping  quill.conf.hb-with-gre  quill.conf.ions  quill.conf.laser-piston  quill.conf.laser-piston-hb  quill.conf.laser-piston-rt  quill.conf.laser-piston-two-films2  quill.conf.multiple-lp  quill.conf.multistage-hb  quill.conf.neutral_flows  quill.conf.pearl-f30-7J  quill.conf.pearl-f40-7J  quill.conf.positron-trapping  quill.conf.positron-trapping-lp  (+2 more)
quill3d/asy/: N.asy  angles.asy  e.asy  emission.asy  energy.asy  n.asy  ne_ey_bz.asy  ne_ey_ex.asy  phasespace.asy  spectrum.asy
quill3d/asy/movie/: make_background.sh  make_script.sh  movie.asy  moviemaker.sh
quill3d/chameleon/: .gitignore  chameleon.R  chameleon.py  makefile
quill3d/chameleon/chameleon-haskell/: Chameleon.hs  chameleon-haskell.cabal
quill3d/doc/: .gitignore  makefile  quill.tex
quill3d/functional_init/: functional_init.hpp
quill3d/functional_init/zero/: CMakeLists.txt  functional_init_class.hpp  functional_init_functions.hpp
quill3d/pusher-lib/: makefile  pusher.cpp  pusher.h
quill3d/python/: .gitignore  allinone.py  chameleon-R.cpp  chameleon-core.cpp  chameleon-example.R  chameleon-example.py  chameleon.R  chameleon.py  dx.py  energy_test.py  expression_parser.py  fpaper.py  makefile  map-ions.py  map-lng.py  map-phen.py  movie-combined.py  movie-tracks.py  movie.py  nxt.py  plot_parallel.py  qcolor.py  qplot.py  resread.py  rmt.py  rmt2d.py  rmtlib.py  rmtplot.py  tcmap.py
quill3d/results/: .gitignore
(+43 files in other folders)
